syntax = "proto3";

package cowfiles;

// The greeting service definition.
service CowfilesManager {
  rpc SaveCowfile (SaveCowfileRequest) returns (CowfileDescriptor);
  rpc GetCowfiles (GetCowfilesRequest) returns (Cowfiles);
  rpc GetCowfile (GetCowfileRequest) returns (CowfileDescriptor);
  rpc GetPreview (GetPreviewRequest) returns (Preview);
  rpc GetCowsay (GetCowsayRequest) returns (Cowsay);
}

message SaveCowfileRequest {
    string server_id = 1;
    string name = 2;
    string uploader_id = 3;
    optional string author = 4;
    // Base64 encoded cowfile
    string data = 5;
}

message GetCowfilesRequest {
    optional string server_id = 1;
}

message GetCowfileRequest {
    string id = 1;
}

message GetPreviewRequest {
    string id = 1;
}

message GetCowsayRequest {
    string chara_id = 1;
    string message = 2;
    bytes font = 3;
    optional bytes bubble_font = 4;
}

message CowfileDescriptor {
    string id = 1;
    optional string server_id = 2;
    string name = 3;
    string author = 4;
    string uploader_id = 5;
}

message Cowfiles {
    repeated CowfileDescriptor cowfiles = 1;
}

message Preview {
    bytes data = 1;
}

message Cowsay {
    bytes data = 1;
}
